--- a/Blog Frontend/package.json
+++ b/Blog Frontend/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.6.3",
     "react-linkify": "^0.2.2",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
+    "react-table": "^6.8.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
